syntax = "proto3";

option csharp_namespace = "backend_client";

package gizem;

import "google/protobuf/any.proto";

service StreamGateway {
  rpc Forward(StreamGatewayQ) returns (StreamGatewayP);
}

message StreamGatewayQ {
    string id   = 1;
    google.protobuf.Any data  = 2;
}

message StreamGatewayP {
    bool success=1;
}
